--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <main>
     <h2>Hello there!</h2>
     <p>This is a personal website</p>
- <img src="img_chania.jpg" alt="Orange Cat Sleeping">
+ <img src="images/dog.jpg" alt="Dog">
 </main>
 
 </body>
