--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <main>
     <h2>Hello there!</h2>
     <p>This is a personal website</p>
- <img src="images/dog1.jpg" alt="Dog">
+ <img style="width:300px" src="images/dog1.jpg" alt="Dog">
 </main>
 
 </body>
