add poem and motif for the song, better flex

--- a/index.html
+++ b/index.html
@@ -1,23 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/icon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>BOHDANDRAHAN</title>
 </head>
+
 <body>
 
-<header>
-    <h1>Welcome to BOHDANDRAHAN Website</h1>
-</header>
+    <header>
+        <h1>Welcome to BOHDANDRAHAN Website</h1>
+    </header>
+    <div class='flex-container'>
+        <div class='row'>
+            <div class='flex-item poem'>
+                <p> Roses are red <br>
+                    Violets are blue <br>
+                    Coffee is good <br>
+                    And you are ok too.
 
-<main>
-    <h2>Hello there!</h2>
-    <p>This is a personal website</p>
- <img style="width:300px" src="images/dog1.jpg" alt="Dog">
-</main>
+            </div>
+        </div>
 
+        <div class='row'>
+
+            <main>
+                <div class='flex-item'>
+                    <h2>Hello there!</h2>
+                    <p>This is a personal website</p>
+                    <img style="width:300px" src="images/dog1.jpg" alt="Dog">
+                </div>
+
+                <div class='song-div flex-item'>
+                    <h3>Eternal Dance</h3>
+                    <h4>This is the motif of the song. <br>
+                        The main idea is that the only thing is forever is THE DANCE people do. The faces change
+                        over
+                        time,
+                        but
+                        the dance stays the same. <br>
+                        People were dancing it for milenia and just recently you were born. Now it's your turn
+                        <br>
+                    </h4>
+
+
+                    <p>
+                        eternal dance, eternal dance
+                    </p>
+                </div>
+            </main>
+
+        </div>
+    </div>
 </body>
-</html>
 
+</html>
