add squeares that move

--- a/index.html
+++ b/index.html
@@ -14,23 +14,35 @@
     <header>
         <h1>Welcome to BOHDANDRAHAN Website</h1>
     </header>
-    <div class='flex-container'>
-        <div class='row'>
-            <div class='flex-item poem'>
-                <p> Roses are red <br>
-                    Violets are blue <br>
-                    Coffee is good <br>
-                    And you are ok too.
-
-            </div>
-        </div>
-
-        <div class='row'>
-
-            <main>
+    <main>
+        <div class='flex-container'>
+            <div class='row'>
                 <div class='flex-item'>
+                    <span class="transforming-dot"></span>
+                    <span class="transforming-dot"></span>
+                    <span class="transforming-dot"></span>
+                    <span class="transforming-dot"></span>
+                    <span class="transforming-dot"></span>
+                    <span class="transforming-dot"></span>
+                    <span class="transforming-dot"></span>
+                    <span class="transforming-dot"></span>
+                </div>
+            </div>
+            <div class='row'>
+                <div class='flex-item poem'>
+                    <p> Roses are red <br>
+                        Violets are blue <br>
+                        Coffee is good <br>
+                        And you are ok too.
+
+                </div>
+            </div>
+
+            <div class='row'>
+                <div class='flex-item hello'>
                     <h2>Hello there!</h2>
                     <p>This is a personal website</p>
+
                     <img style="width:300px" src="images/dog1.jpg" alt="Dog">
                 </div>
 
@@ -51,10 +63,22 @@
                         eternal dance, eternal dance
                     </p>
                 </div>
-            </main>
 
+            </div>
+            <div class='row'>
+                <div class='flex-item panda_chapter'>
+                    For your friend to prepare, he should know how to <br>
+                    work with files and some basic pandas to create
+                    summaries.<br>
+                    There is also a design challenge to create a library for a development team. <br>
+                    He should know a little on how to understand requirements and talk about high level object
+                    oriented
+                    design
+                </div>
+            </div>
         </div>
-    </div>
+
+    </main>
 </body>
 
 </html>
