add links to social media

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </header>
     <main>
         <div class='flex-container'>
+
+
             <div class='row'>
                 <div class='flex-item'>
                     <span class="transforming-dot"></span>
@@ -74,6 +76,21 @@
                     He should know a little on how to understand requirements and talk about high level object
                     oriented
                     design
+                </div>
+            </div>
+            <div class='row'>
+                <div>
+                    <a href="https://github.com/bohdandrahan">
+                        <img src="images/bad_github_logo.png" alt="bat github logo" style="width:42px;height:42px;">
+                    </a>
+                </div>
+                <div> <a href="https://www.instagram.com/bohdandrah/">
+                        <img src="images/bad_insta_logo.png" alt="bad insta logo" style="width:42px;height:42px;">
+                    </a>
+                </div>
+                <div> <a href="https://www.linkedin.com/in/bohdandrahan/">
+                        <img src="images/bad_linkedin_logo.png" alt="bad linkedin logo" style="width:42px;height:42px;">
+                    </a>
                 </div>
             </div>
         </div>
