--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/icon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>BOHDANDRAHAN</title>
+    <title>bohdan drahan</title>
 </head>
 
 <body>
 
     <header>
-        <h1>Welcome to BOHDANDRAHAN Website</h1>
+        <h1>Greetings, most esteemed friend!</h1>
     </header>
     <main>
         <div class='flex-container'>
@@ -42,8 +42,11 @@
 
             <div class='row'>
                 <div class='flex-item hello'>
-                    <h2>Hello there!</h2>
-                    <p>This is a personal website</p>
+                    <h2>Bohdan Drahan</h2>
+
+                    <p>Software Developer</p>
+
+
 
                     <img style="width:300px" src="images/dog1.jpg" alt="Dog">
                 </div>
