--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
     <header>
         <h1>Greetings, most esteemed friend!</h1>
     </header>
+
     <main>
+        <div class="background-gradient-1"></div>
+        <div class="background-gradient-2"></div>
+        <div class="background-gradient-3"></div>
+        <div class="background-gradient-4"></div>
+
         <div class='flex-container'>
-
-
             <div class='row'>
                 <div class='flex-item'>
                     <span class="transforming-dot"></span>
@@ -95,9 +99,19 @@
                         <img src="images/bad_linkedin_logo.png" alt="bad linkedin logo" style="width:42px;height:42px;">
                     </a>
                 </div>
+                <div> <a href="https://bohdandrahan.com">
+                        <img src="images/bad_website_logo.png" alt="bad website logo" style="width:42px;height:42px;">
+                    </a>
+                </div>
+            </div>
+
+            <div class='row'>
+                <div class='flex-item rorating-spiral'>
+                    <img style="width:100px"
+                        src="https://upload.wikimedia.org/wikipedia/commons/c/c5/Archimedean_spiral.svg">
+                </div>
             </div>
         </div>
-
     </main>
 </body>
 
