--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     </header>
 
     <main>
-        <div class="background-gradient-1"></div>
-        <div class="background-gradient-2"></div>
-        <div class="background-gradient-3"></div>
-        <div class="background-gradient-4"></div>
+        <div>
+            <div class="background-gradient-1"></div>
+            <div class="background-gradient-2"></div>
+            <div class="background-gradient-3"></div>
+            <div class="background-gradient-4"></div>
+        </div>
 
         <div class='flex-container'>
             <div class='row'>
@@ -50,11 +52,36 @@
 
                     <p>Software Developer</p>
 
-
-
                     <img style="width:300px" src="images/dog1.jpg" alt="Dog">
                 </div>
+            </div>
+            <div class='row'>
+                <div class='flex-item projects-header'>
+                    Projects:
+                </div>
 
+                <div class='flex-item project'>
+                    <h3>Falling Sand</h3>
+                    <h4>This is the motif of the song. <br>
+                        The main idea is that the only thing is forever is THE DANCE people do. The faces change
+                        over
+                        time,
+                        but
+                        the dance stays the same. <br>
+                        People were dancing it for milenia and just recently you were born. Now it's your turn
+                        <br>
+                    </h4>
+
+                    <p>HERE</p>
+                    <img src="images/projects/falling_sand.png" alt="screenshot of falling sand simulation"
+                        style="width:250px">
+
+                    <p>
+                        eternal dance, eternal dance
+                    </p>
+                </div>
+            </div>
+            <div class='row'>
                 <div class='song-div flex-item'>
                     <h3>Eternal Dance</h3>
                     <h4>This is the motif of the song. <br>
