add few projects

--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
 
                     <p>Software Developer</p>
 
-                    <img style="width:300px" src="images/dog1.jpg" alt="Dog">
+                    <img style="width:200px" src="images/bohdandrahan.jpg" alt="Pesrson behind a laptop">
+                </div>
+            </div>
+            <div class='row'>
+
+                <div class='flex-item projects-header'>
+                    <img style="width:90%" src="images/cat3.jpg" alt="Descktop with monitors and a cat">
                 </div>
             </div>
             <div class='row'>
@@ -60,41 +66,39 @@
                     Projects:
                 </div>
 
-                <div class='flex-item project'>
-                    <h3>Falling Sand</h3>
-                    <h4>This is the motif of the song. <br>
-                        The main idea is that the only thing is forever is THE DANCE people do. The faces change
-                        over
-                        time,
-                        but
-                        the dance stays the same. <br>
-                        People were dancing it for milenia and just recently you were born. Now it's your turn
-                        <br>
-                    </h4>
+                <div class='flex-container'>
+                    <div class='flex-item project'>
+                        <h3>Seed Root</h3>
+                        <h4>Predicting of genome divercity of a population<br>
+                        </h4>
 
-                    <p>HERE</p>
-                    <img src="images/projects/falling_sand.png" alt="screenshot of falling sand simulation"
-                        style="width:250px">
+                        <a href="https://bohdandrahan.github.io/Genome-diversity-model-Seed-Root">Link
+                            here
+                            <img src="images/projects/seed_root.gif" alt="screenshot of falling sand simulation"
+                                style="width:250px">
+                        </a>
+                    </div>
+                    <div class='flex-item project'>
+                        <h3>Falling Sand</h3>
+                        <h4>Falling sand simulation in p5.js using a grid of pixels and simple rules <br>
+                        </h4>
 
-                    <p>
-                        eternal dance, eternal dance
-                    </p>
+                        <a href="https://bohdandrahan.github.io/Falling-Sand/">Link here
+                            <img src="images/projects/falling_sand.png" alt="screenshot of falling sand simulation"
+                                style="width:250px">
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class='row'>
                 <div class='song-div flex-item'>
                     <h3>Eternal Dance</h3>
-                    <h4>This is the motif of the song. <br>
-                        The main idea is that the only thing is forever is THE DANCE people do. The faces change
-                        over
-                        time,
-                        but
-                        the dance stays the same. <br>
-                        People were dancing it for milenia and just recently you were born. Now it's your turn
+                    <h4>The song. <br>
+                        The only thing forever is THE DANCE people do. The faces change over time, but the dance stays
+                        the same. <br>
+                        We were dancing it for milenium and just recently you were born. Now it's your turn
                         <br>
                     </h4>
-
-
                     <p>
                         eternal dance, eternal dance
                     </p>
@@ -103,13 +107,7 @@
             </div>
             <div class='row'>
                 <div class='flex-item panda_chapter'>
-                    For your friend to prepare, he should know how to <br>
-                    work with files and some basic pandas to create
-                    summaries.<br>
-                    There is also a design challenge to create a library for a development team. <br>
-                    He should know a little on how to understand requirements and talk about high level object
-                    oriented
-                    design
+                    panda chapter
                 </div>
             </div>
             <div class='row'>
