add more projects

--- a/index.html
+++ b/index.html
@@ -69,23 +69,71 @@
                 <div class='flex-container'>
                     <div class='flex-item project'>
                         <h3>Seed Root</h3>
-                        <h4>Predicting of genome divercity of a population<br>
+                        <h4>Predicting of genome divercity of a population.<br>
                         </h4>
 
                         <a href="https://bohdandrahan.github.io/Genome-diversity-model-Seed-Root">Link
                             here
-                            <img src="images/projects/seed_root.gif" alt="screenshot of falling sand simulation"
+                            <img src="images/projects/seed_root.gif" alt="animation of seed root project"
                                 style="width:250px">
                         </a>
                     </div>
                     <div class='flex-item project'>
                         <h3>Falling Sand</h3>
-                        <h4>Falling sand simulation in p5.js using a grid of pixels and simple rules <br>
+                        <h4>Falling sand simulation in p5.js using a grid of pixels and simple rules. <br>
                         </h4>
 
                         <a href="https://bohdandrahan.github.io/Falling-Sand/">Link here
-                            <img src="images/projects/falling_sand.png" alt="screenshot of falling sand simulation"
+                            <img src="images/projects/falling_sand.gif" alt="animation of falling sand simulation"
                                 style="width:250px">
+                        </a>
+                    </div>
+                    <div class='flex-item project'>
+                        <h3>Sorting Algorithm Visualisation</h3>
+                        <h4>
+                            Implementing a famously faster sorting algorithm: the Quicksort! And visualize the process
+                            with p5.js!
+
+                        </h4>
+                        <a href="https://bohdandrahan.github.io/Sorting-Visual/">Link here
+                            <img src="images/projects/sorting.gif" alt="animation sorting algorithm"
+                                style="width:250px">
+                        </a>
+                    </div>
+                    <div class='flex-item project'>
+                        <h3>The Snake Game</h3>
+                        <h4>
+                            Brought to life in JavaScript with p5.js, weaves the classic arcade charm
+                            into the web, where players guide a growing serpent through a dance of sustenance and
+                            survival amidst smooth animations and responsive controls.
+
+                        </h4>
+                        <a href="https://bohdandrahan.github.io/Snake-game">Link here
+                            <img src="images/projects/snake.gif" alt="animation snake game" style="width:250px">
+                        </a>
+                    </div>
+                    <div class='flex-item project' style="width: 500px;">
+                        <h3>Diffusion-Limited Aggregation</h3>
+                        <h4>
+                            <a href="https://en.wikipedia.org/wiki/Diffusion-limited_aggregation">Diffusion-limited
+                                aggregation (DLA)</a> is a process that describes the formation of patterns
+                            and structures in certain physical and chemical systems. It is particularly relevant in
+                            explaining how clusters and fractal structures form in nature
+                        </h4>
+                        <a href=" https://bohdandrahan.github.io/Diffusion-Limited-Aggregation/ ">Link here<br>
+                            <img src="images/projects/diffusion-limited-aggregation.gif"
+                                alt="animation Diffusion-Limited-Aggregation" style="width:250px">
+                        </a>
+                    </div>
+                    <div class='flex-item project' style="width: 90%;">
+                        <h3>Shared Canvas</h3>
+                        <h4>
+                            Creating a local server. Hosting a shared, collaborative drawing canvas. Broadcasting
+                            messages between clients and the server using node, express, p5.js and socket.io.
+                        </h4>
+                        <a href="https://github.com/bohdandrahan/Shared-Canvas">Link here<br>
+                            <img src="images/projects/shared_canvas.gif" alt="animation shared canvas"
+                                style="width:90%">
                         </a>
                     </div>
                 </div>
