--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
                     <img style="width:200px" src="images/bohdandrahan.jpg" alt="Pesrson behind a laptop">
                 </div>
             </div>
-            <div class='row'>
+            <div class='row' style="width:80%">
 
                 <div class='flex-item projects-header'>
-                    <img style="width:90%" src="images/cat3.jpg" alt="Descktop with monitors and a cat">
+                    <img style="width:80%; max-width: 500px;" src="images/cat3.jpg"
+                        alt="Descktop with monitors and a cat">
                 </div>
             </div>
             <div class='row'>
@@ -112,7 +113,7 @@
                             <img src="images/projects/snake.gif" alt="animation snake game" style="width:250px">
                         </a>
                     </div>
-                    <div class='flex-item project' style="width: 500px;">
+                    <div class='flex-item project' style="width: 80%; max-width: 300px;">
                         <h3>Diffusion-Limited Aggregation</h3>
                         <h4>
                             <a href="https://en.wikipedia.org/wiki/Diffusion-limited_aggregation">Diffusion-limited
@@ -125,7 +126,7 @@
                                 alt="animation Diffusion-Limited-Aggregation" style="width:250px">
                         </a>
                     </div>
-                    <div class='flex-item project' style="width: 90%;">
+                    <div class='flex-item project' style="width: 80%; max-width: 400px;">
                         <h3>Shared Canvas</h3>
                         <h4>
                             Creating a local server. Hosting a shared, collaborative drawing canvas. Broadcasting
@@ -133,7 +134,7 @@
                         </h4>
                         <a href="https://github.com/bohdandrahan/Shared-Canvas">Link here<br>
                             <img src="images/projects/shared_canvas.gif" alt="animation shared canvas"
-                                style="width:90%">
+                                style="width:80%; max-width: 400px;">
                         </a>
                     </div>
                 </div>
