add another project

--- a/index.html
+++ b/index.html
@@ -73,9 +73,21 @@
                         <h4>Predicting of genome divercity of a population.<br>
                         </h4>
 
-                        <a href="https://bohdandrahan.github.io/Genome-diversity-model-Seed-Root">Link
-                            here
+                        <a href="https://bohdandrahan.github.io/Genome-diversity-model-Seed-Root">Link here<br>
                             <img src="images/projects/seed_root.gif" alt="animation of seed root project"
+                                style="width:250px">
+                        </a>
+                    </div>
+                    <div class='flex-item project'>
+                        <h3>Chicken Evolution</h3>
+                        <h4>Introducing genomes that change the behaviour of the individuals.<br>
+                            Chickens that eat worms get more health and the one that eat cigarettes get it less.
+                            Healthy chickens can get offsprings and unhealthy chickens die.
+                        </h4>
+
+                        <a href="https://bohdandrahan.github.io/Chickens-Worms-And-Cigarette-Butts">Link
+                            here<br>
+                            <img src="images/projects/chickens.gif" alt="animation of chicken evolution project"
                                 style="width:250px">
                         </a>
                     </div>
