--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/icon.ico" type="image/x-icon">
+    <link rel="icon" href="images/projects/diffusion-limited-aggregation.gif" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>bohdan drahan</title>
 </head>
