add another project

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
             <div class='row' style="width:80%">
 
                 <div class='flex-item projects-header'>
-                    <img style="width:80%; max-width: 500px;" src="images/cat3.jpg"
+                    <img style="width:80%; max-width: 1000px;" src="images/cat3.jpg"
                         alt="Descktop with monitors and a cat">
                 </div>
             </div>
             <div class='row'>
                 <div class='flex-item projects-header'>
-                    Projects:
+                    <h3>Projects:</h3>
                 </div>
 
                 <div class='flex-container'>
@@ -76,6 +76,64 @@
                         <a href="https://bohdandrahan.github.io/Genome-diversity-model-Seed-Root">Link here<br>
                             <img src="images/projects/seed_root.gif" alt="animation of seed root project"
                                 style="width:250px">
+                        </a>
+                    </div>
+                    <div class='flex-item project' style="width: 90%; max-width: 500px;">
+                        <div>
+                            <h3>Seed Root Part 2</h3>
+
+                            <h4>Introducing the model of sexual reproduction, meaning the genes from two parents are
+                                combined
+                                to produce offspring with genetic variation. <br>
+                                <br>
+                                This dynamic process, capturing the essence of biological diversity, was brought to life
+                                through a Python implementation using matplotlib, allowing for a vivid visual
+                                representation of genetic inheritance.
+                            </h4>
+                        </div>
+
+                        <div style="">
+                            <img class="mySlides" src="images/projects/seed-root-charts/1.svg" style="width:100%">
+                            <img class="mySlides" src="images/projects/seed-root-charts/2.svg" style="width:100%">
+                            <img class="mySlides" src="images/projects/seed-root-charts/3.svg" style="width:100%">
+                            <img class="mySlides" src="images/projects/seed-root-charts/4.svg" style="width:100%">
+                            <img class="mySlides" src="images/projects/seed-root-charts/5.svg" style="width:100%">
+                            <img class="mySlides" src="images/projects/seed-root-charts/6.svg" style="width:100%">
+                            <img class="mySlides" src="images/projects/seed-root-charts/7.svg" style="width:100%">
+                            <img class="mySlides" src="images/projects/seed-root-charts/8.svg" style="width:100%">
+                            <img class="mySlides" src="images/projects/seed-root-charts/9.svg" style="width:100%">
+                        </div>
+
+                        <div>
+                            <div style="padding:10px">
+                                <button onclick="plusDivs(-1)">❮ Prev</button>
+                                <button onclick="plusDivs(1)">Next ❯</button>
+
+                            </div>
+                            <button class=" slide-btn" onclick="currentDiv(1)">1</button>
+                            <button class=" slide-btn" onclick="currentDiv(2)">2</button>
+                            <button class=" slide-btn" onclick="currentDiv(3)">3</button>
+                            <button class=" slide-btn" onclick="currentDiv(4)">4</button>
+                            <button class=" slide-btn" onclick="currentDiv(5)">5</button>
+                            <button class=" slide-btn" onclick="currentDiv(6)">6</button>
+                            <button class=" slide-btn" onclick="currentDiv(7)">7</button>
+                            <button class=" slide-btn" onclick="currentDiv(8)">8</button>
+                            <button class=" slide-btn" onclick="currentDiv(9)">9</button>
+                        </div>
+
+                        <script src="scripts/slider.js"> </script>
+                    </div>
+                    <div class='flex-item project' style="width: 90%; max-width: 500px;">
+                        <h3>Diffusion-Limited Aggregation</h3>
+                        <h4>
+                            <a href="https://en.wikipedia.org/wiki/Diffusion-limited_aggregation">Diffusion-limited
+                                aggregation (DLA)</a> is a process that describes the formation of patterns
+                            and structures in certain physical and chemical systems. It is particularly relevant in
+                            explaining how clusters and fractal structures form in nature
+                        </h4>
+                        <a href=" https://bohdandrahan.github.io/Diffusion-Limited-Aggregation/ ">Link here<br>
+                            <img src="images/projects/diffusion-limited-aggregation.gif"
+                                alt="animation Diffusion-Limited-Aggregation" style="width:90%; max-width:450px;">
                         </a>
                     </div>
                     <div class='flex-item project'>
@@ -125,20 +183,7 @@
                             <img src="images/projects/snake.gif" alt="animation snake game" style="width:250px">
                         </a>
                     </div>
-                    <div class='flex-item project' style="width: 80%; max-width: 300px;">
-                        <h3>Diffusion-Limited Aggregation</h3>
-                        <h4>
-                            <a href="https://en.wikipedia.org/wiki/Diffusion-limited_aggregation">Diffusion-limited
-                                aggregation (DLA)</a> is a process that describes the formation of patterns
-                            and structures in certain physical and chemical systems. It is particularly relevant in
-                            explaining how clusters and fractal structures form in nature
-                        </h4>
-                        <a href=" https://bohdandrahan.github.io/Diffusion-Limited-Aggregation/ ">Link here<br>
-                            <img src="images/projects/diffusion-limited-aggregation.gif"
-                                alt="animation Diffusion-Limited-Aggregation" style="width:250px">
-                        </a>
-                    </div>
-                    <div class='flex-item project' style="width: 80%; max-width: 600px;">
+                    <div class='flex-item project' style="width: 80%; max-width: 1000px;">
                         <h3>Shared Canvas</h3>
                         <h4>
                             Creating a local server. Hosting a shared, collaborative drawing canvas. Broadcasting
@@ -146,7 +191,7 @@
                         </h4>
                         <a href="https://github.com/bohdandrahan/Shared-Canvas">Link here<br>
                             <img src="images/projects/shared_canvas.gif" alt="animation shared canvas"
-                                style="width:85%; max-width: 600px;">
+                                style="width:85%; max-width: 1000px;">
                         </a>
                     </div>
                 </div>
