change projects to some of my work label

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
             <div class='row'>
                 <div class='flex-item projects-header'>
-                    <h3>Projects:</h3>
+                    <h3 style="color: black; text-shadow: 0 0 5px white;">Some of my work:</h3>
                 </div>
 
                 <div class='flex-container'>
