--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
 
             <div class='row'>
-                <div class='flex-item hello'>
+                <div class='flex-item hello' style="color: white; text-shadow: 0 0 10px black;">
                     <h2>Bohdan Drahan</h2>
 
                     <p>Software Developer</p>
@@ -244,6 +244,16 @@
             </div>
         </div>
     </main>
+
+
+    <footer>
+        <p>&copy; <span id="footer_year"></span>
+            <a href="/"> bohdandrahan.com</a> All rights reserved.
+        </p>
+    </footer>
+
+    <script src="scripts/footer.js"></script>
+
 </body>
 
 </html>
