--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class='flex-container'>
                     <div class='flex-item project'>
                         <h3>Seed Root</h3>
-                        <h4>Predicting of genome divercity of a population.<br>
+                        <h4>Predicting of genome diversity of a population.<br>
                         </h4>
 
                         <a href="https://bohdandrahan.github.io/Genome-diversity-model-Seed-Root">Link here<br>
