add birdhouse project

--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@
 
                 <div class='flex-container'>
                     <div class='flex-item project'>
+                        <h3>Birdhouse</h3>
+                        <h4>Rendering a 3D model of a birdhouse using p5.js<br>
+                        </h4>
+
+                        <a href="https://bohdandrahan.github.io/birdhouse">Link here<br>
+                            <img src="images/projects/birdhouse.gif" alt="animation of 3D rendered birdhouse "
+                                style="width:100px">
+                        </a>
+                    </div>
+
+                    <div class='flex-item project'>
                         <h3>Seed Root</h3>
                         <h4>Predicting of genome diversity of a population.<br>
                         </h4>
