add my latest project galaxy

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
     <header>
         <h1>Greetings, most esteemed friend!</h1>
     </header>
@@ -68,6 +67,17 @@
                 </div>
 
                 <div class='flex-container'>
+                    <div class='flex-item project' style="width: 90%; max-width: 600px;">
+                        <h3>Galaxy</h3>
+                        <h4>Rendering a 3D model of a galaxy using p5.js<br>
+                        </h4>
+
+                        <a href="https://bohdandrahan.github.io/galaxy_art/">Link here<br>
+                            <img src="images/projects/galaxy.gif" alt="animation of 3D rendered galaxy "
+                                style="width: 500px;">
+                        </a>
+                    </div>
+
                     <div class='flex-item project'>
                         <h3>Birdhouse</h3>
                         <h4>Rendering a 3D model of a birdhouse using p5.js<br>
@@ -75,7 +85,7 @@
 
                         <a href="https://bohdandrahan.github.io/birdhouse">Link here<br>
                             <img src="images/projects/birdhouse.gif" alt="animation of 3D rendered birdhouse "
-                                style="width:100px">
+                                style="width:100px;">
                         </a>
                     </div>
 
