--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <h4>Rendering a 3D model of a galaxy using p5.js<br>
                         </h4>
 
-                        <a href="https://bohdandrahan.github.io/galaxy_art/">Link here<br>
+                        <a href="https://bohdandrahan.github.io/galaxy/">Link here<br>
                             <img src="images/projects/galaxy.gif" alt="animation of 3D rendered galaxy "
                                 style="width: 500px;">
                         </a>
