--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
                 </div>
 
                 <div class='flex-container'>
-                    <div class='flex-item project' style="width: 90%; max-width: 600px;">
+                    <div class='flex-item project'>
                         <h3>Galaxy</h3>
                         <h4>Rendering a 3D model of a galaxy using p5.js<br>
                         </h4>
 
                         <a href="https://bohdandrahan.github.io/galaxy/">Link here<br>
                             <img src="images/projects/galaxy.gif" alt="animation of 3D rendered galaxy "
-                                style="width: 400px;">
+                                style="width:100%;">
                         </a>
                     </div>
 
